--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ html {
 body {
   --code-block-color: #EBEBEB;
   display: flex;
+  padding-top: 3.5rem;
+  padding-bottom: 3rem;
   justify-content: center;
 }
 
