--- a/style.css
+++ b/style.css
@@ -114,6 +114,14 @@ ul:not(article ul) {
   width: 200px;
 }
 
+.badge {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  width: 40px;
+  height: 40px;
+}
+
 @media screen and (min-width: 800px) {
   .expand-width {
     animation-name: expand-md;
